--- a/CoffeeMaster/coffee.html
+++ b/CoffeeMaster/coffee.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+</head>
+<body>
+    <h1>مرحبا</h1>
+    <h2>انا شهد</h2>
+    <h3>Caribou وقهوتي المفضلة احصل عليها من </h3>
+    
+</body>
+</html>
+
+
 <!-- وغيرها h1, h2 استخدم وسوم العناوين المختلفة -->
 <!-- وقم بكتابة الجمل التالية -->
 
@@ -7,4 +20,5 @@
     Caribou وقهوتي المفضلة أحصل عليها من
 -->
 
-<!-- بمتجر القهوة المفضل لديك وقم بالازم Caribouاستبدل محمد باسمك و -->
+<!-- بمتجر القهوة المفضل لديك وقم بالازم Caribouاستبدل محمد باسمك و 
+
